Ajout du referencement local avec schema.org

--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
 	<meta name="keywords" content="photographe, photographie, portfolio, shooting, retouches, album photos">
 	<meta name="author" content="Nina Carducci">
 	<title>Nina Carducci - Photographe Professionnelle</title>
-	<!-- Meta tags pour le référencement local -->
-    <meta name="geo.region" content="FR">
-    <meta name="geo.placename" content="Bordeaux">
-    <meta name="format-detection" content="telephone=no"> <!-- Empêche la détection automatique des numéros de téléphone -->
-	<!-- Meta tags pour les informations de contact -->
-    <meta name="address" content="68 avenue Alsace-Lorraine, 33200 Bordeaux">
-    <meta name="telephone" content="05 56 67 78 89">
-    <meta name="business_hours" content="Mo-Fr 10:00-19:00">
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Nina Carducci - Photographe Professionnelle" />
 	<meta property="og:type" content="website" />
@@ -43,12 +35,22 @@
 	<script src="./assets/scripts.js"></script>
 	<script type="application/ld+json">
 		{
-		  "@context": "http://schema.org",
-		  "@type": "Dataset",
-		  "name": "Nina Carducci",
-		  "description": "Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer. Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre. C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos."
+		  "@context": "https://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carducci - Photographe Professionnelle",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"addressRegion": "Nouvelle-Aquitaine",
+			"postalCode": "33200",
+			"addressCountry": "France"
+		  },
+		  "telephone": "05 56 67 78 89",
+		  "openingHours": "Lundi à vendredi : 10h00-19h00"
 		}
 	</script>
+	
 	<script type="application/ld+json">
 		[
 		  {
@@ -70,8 +72,7 @@
 			"description": "Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé 400€ album A4 30 pages recto/verso"
 		  }
 		]
-		</script>
-	
+	</script>	
 </head>
 <body>
 	
